--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   source:
     git:
-      url: <https URL for your generated project's Git repository>
+      url: https://github.com/nik3009/tradingAgent.git
       ref:
         branch: main
   build:
