--- a/config/app-operator/sta-trading-agent-oauth2.yaml
+++ b/config/app-operator/sta-trading-agent-oauth2.yaml
@@ -9,6 +9,6 @@ stringData:
   client-authentication-method: client_secret_basic
   authorization-grant-types: client_credentials
   scope: bid
-  client-id: insert-client-id
-  client-secret: insert-client-secret
-  issuer-uri: insert-issuer-uri
+  client-id: sta_springkles
+  client-secret: e0e993cc-2828-4cf0-b9fd-8c13e96831b0
+  issuer-uri: https://login.sso.az.run.withtanzu.com
