App YML changes

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,3 +1,10 @@
+app:
+  marketplace:
+    url: https://sta.az.run.withtanzu.com
+  agent:
+    strategy: buy-lower-stock
+    user: springkles
+
 logging:
   level:
     com.vmware.tanzu.demos.sta: DEBUG
